- Fix unit tests both for Mac and Windows environment. - Replace Html Parser with one that is based on Jericho (require running ./fetch_libraries.sh on cast.js project.
git-svn-id: https://wala.svn.sourceforge.net/svnroot/wala/trunk@3942 f5eafffb-2e1d-0410-98e4-8ec43c5233c4